dsc-extensin-iis-server-windows-url-rewrite/azuredeploy.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkInterfaceName": {
      "type": "string"
    },
    "privateIPAllocationMethod": {
      "type": "string"
    },
    "publicIPAllocationMethod": {
      "type": "string"
    },
    "virtualMachineName": {
      "type": "string"
    },
    "adminUsername": {
      "type": "string"
    },
    "adminPassword": {
      "type": "securestring"
    },
    "sqlAdministratorLogin": {
      "type": "string"
    },
    "sqlAdministratorPassword": {
      "type": "securestring"
    },
    "storageAccountType": {
      "type": "string"
    },
    "vm001StorageAccountContainerName": {
      "type": "string"
    },
    "_artifactsLocation": {
      "type": "string"
    },
    "_artifactsLocationSasToken": {
      "type": "securestring"
    },
    "ServerSetupUpdateTagVersion": {
      "type": "string"
    }
  },
  "variables": {
    "resourceGroupUniqueString": "[uniqueString(resourceGroup().id,resourceGroup().location,subscription().subscriptionId)]",
    "frontEndSubnetName": "FrontEnd",
    "virtualNetworksName": "vnet001",
    "vmPublicIpAddressName": "vmpublicip",
    "virtualNetwork": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworksName'))]",
    "frontEndSubnetId": "[concat(variables('virtualNetwork'), '/subnets/', variables('frontEndSubnetName'))]",
    "publicIPDNSName": "[toLower(concat('vm001',variables('resourceGroupUniqueString')))]",
    "vmOSDiskName": "[concat(parameters('virtualMachineName'),'OSDisk')]",
    "networkSecurityGroupName": "[concat(parameters('virtualMachineName'),'-nsg')]",
    "ServerSetupArchiveFolder": "DSC",
    "ServerSetupArchiveFileName": "ServerSetup.zip",
    "_storageAccountName": "[concat('sa',variables('resourceGroupUniqueString'))]",
    "sqlServerName": "[concat('sqlserver',variables('resourceGroupUniqueString'))]"
  },
  "resources": [
    {
      "apiVersion": "2014-04-01-preview",
      "type": "Microsoft.Sql/servers",
      "location": "[resourceGroup().location]",
      "name": "[variables('sqlServerName')]",
      "properties": {
        "administratorLogin": "[parameters('sqlAdministratorLogin')]",
        "administratorLoginPassword": "[parameters('sqlAdministratorPassword')]",
        "version": "12.0"
      },
      "resources": [
        {
          "apiVersion": "2014-04-01-preview",
          "dependsOn": [
            "[concat('Microsoft.Sql/servers/', variables('sqlServerName'))]"
          ],
          "location": "[resourceGroup().location]",
          "name": "AllowAllWindowsAzureIps",
          "properties": {
            "endIpAddress": "0.0.0.0",
            "startIpAddress": "0.0.0.0"
          },
          "type": "firewallrules"
        }
      ]
    },
    {
      "name": "[parameters('virtualMachineName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2015-06-15",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('_storageAccountName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaceName'))]"
      ],
      "properties": {
        "osProfile": {
          "computerName": "[parameters('virtualMachineName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          }
        },
        "hardwareProfile": {
          "vmSize": "Standard_DS1_v2"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2016-Datacenter",
            "version": "latest"
          },
          "osDisk": {
            "name": "[parameters('virtualMachineName')]",
            "vhd": {
              "uri": "[concat('https://', variables('_storageAccountName'), '.blob.core.windows.net/', parameters('vm001StorageAccountContainerName'), '/', variables('vmOSDiskName'), '.vhd')]"
            },
            "createOption": "FromImage"
          },
          "dataDisks": []
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaceName'))]"
            }
          ]
        }
      },
      "resources": [
        {
          "name": "Microsoft.Powershell.DSC",
          "type": "extensions",
          "location": "[resourceGroup().location]",
          "apiVersion": "2015-06-15",
          "dependsOn": [
            "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachineName'))]"
          ],
          "tags": {
            "displayName": "ServerSetup"
          },
          "properties": {
            "publisher": "Microsoft.Powershell",
            "type": "DSC",
            "typeHandlerVersion": "2.9",
            "autoUpgradeMinorVersion": true,
            "forceUpdateTag": "[parameters('ServerSetupUpdateTagVersion')]",
            "settings": {
              "configuration": {
                "url": "[concat(parameters('_artifactsLocation'), '/', variables('ServerSetupArchiveFolder'), '/', variables('ServerSetupArchiveFileName'))]",
                "script": "ServerSetup.ps1",
                "function": "Main"
              },
              "configurationArguments": {
                "nodeName": "[parameters('virtualMachineName')]"
              }
            },
            "protectedSettings": {
              "configurationUrlSasToken": "[parameters('_artifactsLocationSasToken')]"
            }
          }
        }
      ]
    },
    {
      "name": "[parameters('networkInterfaceName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2016-03-30",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('vmPublicIpAddressName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworksName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
      ],
      "tags": {
        "displayName": "Network Interface"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "[concat(parameters('NetworkInterfaceName'), 'ipconfig1')]",
            "properties": {
              "privateIPAllocationMethod": "[parameters('privateIPAllocationMethod')]",
              "subnet": {
                "id": "[variables('frontEndSubnetId')]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('vmPublicIpAddressName'))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
      }
    },
    {
      "name": "[variables('_storageAccountName')]",
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2015-06-15",
      "location": "[resourceGroup().location]",
      "properties": {
        "accountType": "[parameters('storageAccountType')]"
      }
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworksName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.40.0.0/16"
          ]
        },
        "dhcpOptions": {
          "dnsServers": [
            "10.2.4.13",
            "8.8.8.8"
          ]
        },
        "subnets": [
          {
            "name": "FrontEnd",
            "properties": {
              "addressPrefix": "10.40.1.0/24"
            }
          },
          {
            "name": "GatewaySubnet",
            "properties": {
              "addressPrefix": "10.40.0.0/24"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('vmPublicIpAddressName')]",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2016-03-30",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "[parameters('publicIPAllocationMethod')]",
        "dnsSettings": {
          "domainNameLabel": "[variables('publicIPDNSName')]"
        }
      }
    },
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2016-03-30",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-https",
            "properties": {
              "priority": 800,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "443",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-http",
            "properties": {
              "priority": 900,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "80",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1000,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "3389",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "custom-allow-octopus-tentacle",
            "properties": {
              "priority": 1010,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "10933",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    }
  ]
}
